docs(Doc index): Clean up documentation index page

--- a/docs/doc_index.qmd
+++ b/docs/doc_index.qmd
@@ -1,10 +1,14 @@
 ---
 title: "Adaptation Atlas Documentation Index"
+pagetitle: "Atlas Documentation"
 ---
 
-# Tips on Notebook Development
+## Atlas Resources
+
+- [Glossary](/docs/glossary.qmd)
+- [Frequently Asked Questions](/docs/faq.qmd)
+
+## Tips on Notebook Development
 
 - [Guidelines for Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
-- [Glossary](/docs/glossary.qmd)
-- [Frequently Asked Questions](/docs/faq.qmd)
