feat(faq): Add function to render FAQ links

--- a/docs/faq.qmd
+++ b/docs/faq.qmd
@@ -66,6 +66,17 @@ function escapeHtml(str = "") {
     .replace(/'/g, "&#39;");
 }
 
+function renderAnswerWithLinks(raw = "") {
+  const safe = escapeHtml(raw);
+  return safe
+    .replace(/\[([^\]]+)\]\(([^)]+)\)/g, (_, text, url) => {
+      const href = url.trim();
+      const allowed = /^(https?:\/\/|mailto:|\/|\.\/|\.\.\/|#)/i.test(href);
+      return allowed ? `<a href="${href}">${text}</a>` : `[${text}](${url})`;
+    })
+    .replace(/\n/g, "<br>");
+}
+
 function sanitizeId(str) {
   return str
     .toLowerCase()
@@ -160,7 +171,7 @@ function renderFAQ() {
 
     section.items.forEach(item => {
       const question = escapeHtml(item[lang.question] || item["Question EN"] || "");
-      const answer = escapeHtml(item[lang.answer] || item["Answer EN"] || "").replace(/\n/g, "<br>");
+      const answer = renderAnswerWithLinks(item[lang.answer] || item["Answer EN"] || "");
       html += "<details style=\"margin-bottom: 12px;\">";
       html += `<summary style="cursor: pointer; font-weight: 600;">${question}</summary>`;
       html += `<p style="margin-top: 8px; line-height: 1.6;">${answer}</p>`;
