refactor(back-to-top): Clean back to top button and add it to ROI Notebook

--- a/docs/faq.qmd
+++ b/docs/faq.qmd
@@ -16,15 +16,13 @@ format:
   html:
     include-in-header:
       - text: |
-          <script src="./../components/backToTop.js"></script>
           <script src="./../components/atlasToc.js"></script>
 ---
-
-<back-to-top></back-to-top>
 
 # FAQ
 
 ```{=html}
+<back-to-top></back-to-top>
 <atlas-toc heading-levels="2"></atlas-toc>
 ```
 
@@ -86,6 +84,13 @@ function sanitizeId(str) {
 
 function getLangConfig() {
   return LANGUAGES.find(lang => lang.code === state.currentLang) || LANGUAGES[0];
+}
+
+function updateBackToTopLabel() {
+  const el = document.querySelector("back-to-top");
+  if (!el || typeof el.updateLabel !== "function") return;
+  const label = state.currentLang === "FR" ? "Retour en haut" : "Back to top";
+  el.updateLabel(label);
 }
 
 function buildSections(entries) {
@@ -191,6 +196,7 @@ fetch(DATA_URL)
     state.sections = buildSections(data);
     mountLanguageSelector();
     renderFAQ();
+    updateBackToTopLabel();
   })
   .catch(error => {
     console.error("Error loading FAQ JSON:", error);
