--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -16,7 +16,6 @@ format:
   html:
     include-in-header:
       - text: |
-          <script src="./../components/backToTop.js"></script>
           <script src="./../components/atlasToc.js"></script>
 ---
 
@@ -104,6 +103,13 @@ function updateSearchPlaceholder() {
   if (!searchBox) return;
   const language = LANGUAGES.find(lang => lang.code === state.currentLang);
   searchBox.placeholder = language ? language.placeholder : "Search glossary...";
+}
+
+function updateBackToTopLabel() {
+  const el = document.querySelector("back-to-top");
+  if (!el || typeof el.updateLabel !== "function") return;
+  const label = state.currentLang === "FR" ? "Retour en haut" : "Back to top";
+  el.updateLabel(label);
 }
 
 function handleLanguageChange(langCode) {
@@ -214,6 +220,7 @@ fetch(DATA_URL)
     mountLanguageSelector();
     updateSearchPlaceholder();
     renderGlossary();
+    updateBackToTopLabel();
 
     if (searchBox) {
       searchBox.addEventListener(
