fix(roiNB): Quick fix to escape single quote in sql queries as Côted’Ivoire kept breaking the sql query

--- a/notebooks/roi/notebook.qmd
+++ b/notebooks/roi/notebook.qmd
@@ -24,7 +24,11 @@ import { atlasTOC } from "/helpers/toc.ojs";
 
 import { atlasCitation, atlasContributionSection } from "/helpers/citation.js";
 
-import { formatUSD, inputTemplate } from "/helpers/std.ojs";
+import {
+  formatUSD,
+  inputTemplate,
+  cleanAdminInput_SQL,
+} from "/helpers/std.ojs";
 
 import { heroImage as atlasHero } from "/helpers/hero.js";
 
@@ -557,7 +561,7 @@ db = {
     cv_raw: FileAttachment("/data/economicReturns/faostat_prod_cv.parquet")
   })
   await db.query(`
-    CREATE TABLE exposure AS  -- data is ~ 1 mb so table possibly more performant
+    CREATE TABLE exposure AS
       SELECT
         iso3,
         admin0_name,
@@ -1544,7 +1548,6 @@ calcCV = async () => {
   const cache_key = `${[...admin0_names].sort().join(',')}|${[...select_crop].sort().join(',')}|${cis_impact}`;
 
   if (cv_cache_key === cache_key) {
-    console.log('Skipped cv run as inputs the same');
     return cv_result;
   }
 
@@ -1553,7 +1556,7 @@ calcCV = async () => {
     SELECT *
     FROM cv
     WHERE crop in ('${select_crop.join("', '")}')
-    AND admin0_name in ('${admin0_names.join("', '")}') -- This needs the a0_name rather than iso3
+    AND admin0_name in ('${admin0_names.map((d) => cleanAdminInput_SQL(d)).join("', '")}') -- This needs the a0_name rather than iso3
 `);
 
   const cv_monteCarlo = await Promise.all(
